# Drex

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/adr/: 000-template.md
docs/worklog/: 000-template.md
gateway/: README.md  pyproject.toml
gateway/src/gateway/: __init__.py  __main__.py  main.py
libs/feature/: pyproject.toml
libs/schema/: pyproject.toml
libs/schema/src/drex/schema/: __init__.py  events.py  models.py
libs/util/: pyproject.toml
libs/util/src/drex/: __init__.py
libs/util/src/drex/util/: __init__.py  config.py  kafka.py
services/example_service/: README.md  pyproject.toml
services/example_service/src/example_service/: __init__.py  __main__.py  events.py
services/example_service/tests/: test_events.py
