[tool.poetry]
name = "drex"
version = "0.1.0"
description = "Python monorepo for microservices and shared libraries."
authors = ["swordenkisk <github.com/swordenkisk>"]
license = "Proprietary"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
mypy = "^1.10"
ruff = "^0.4"
testcontainers = {extras = ["kafka", "postgresql"], version = "^4.0"}

# ── Workspace members (Poetry 1.8+ workspaces) ────────────────────────────
[tool.poetry.workspace]
members = [
    "libs/schema",
    "libs/util",
    "libs/feature",
    "services/example_service",
    "gateway",
]

# ── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["libs", "services", "gateway"]
python_files   = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "--tb=short -q"

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.11"
strict                = true
ignore_missing_imports = true
exclude               = ["docs/", "scripts/"]

[build-system]
requires      = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
