[tool.poetry]
name = "drex-gateway"
version = "0.1.0"
description = "Drex API Gateway — HTTP routing and gRPC aggregation only. No business logic."
authors = ["swordenkisk"]
license = "Proprietary"
packages = [{include = "gateway", from = "src"}]

[tool.poetry.dependencies]
python     = "^3.11"
drex-util  = {path = "../libs/util", develop = true}
fastapi    = "^0.111"
uvicorn    = {extras = ["standard"], version = "^0.30"}
grpcio     = "^1.63"
httpx      = "^0.27"

[tool.poetry.scripts]
drex-gateway = "gateway.__main__:main"

[build-system]
requires      = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
