[tool.poetry]
name = "drex-feature"
version = "0.1.0"
description = "Drex — reusable business logic with no transport or DB wiring."
authors = ["swordenkisk"]
license = "Proprietary"
packages = [{include = "drex", from = "src"}]

[tool.poetry.dependencies]
python      = "^3.11"
drex-schema = {path = "../../libs/schema", develop = true}

[build-system]
requires      = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
