[tool.poetry]
name = "drex-schema"
version = "0.1.0"
description = "Drex — single source of truth for data contracts (Pydantic models, event schemas)."
authors = ["swordenkisk"]
license = "Proprietary"
packages = [{include = "drex", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"

[build-system]
requires      = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
