[tool.poetry]
name = "example-service"
version = "0.1.0"
description = "Drex — example microservice scaffold."
authors = ["swordenkisk"]
license = "Proprietary"
packages = [{include = "example_service", from = "src"}]

[tool.poetry.dependencies]
python       = "^3.11"
drex-schema  = {path = "../../libs/schema",  develop = true}
drex-util    = {path = "../../libs/util",    develop = true}
drex-feature = {path = "../../libs/feature", develop = true}
grpcio       = "^1.63"

[tool.poetry.group.test.dependencies]
pytest             = "^8.0"
pytest-asyncio     = "^0.23"
testcontainers     = {extras = ["kafka", "postgresql"], version = "^4.0"}

[tool.poetry.scripts]
example-service = "example_service.__main__:main"

[build-system]
requires      = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
